correction Lurie -> Iurie

--- a/readme
+++ b/readme
@@ -1,6 +1,6 @@
 ######################
 PROJET final Datascientest 
-Lurie, Marin, JB
+Iurie, Marin, JB
 ######################
 
 * Récupération données publiques
